282113: Demos are missing files after export

--- a/examples/org.eclipse.e4.demo.contacts/build.properties
+++ b/examples/org.eclipse.e4.demo.contacts/build.properties
@@ -9,4 +9,5 @@ bin.includes = META-INF/,\
                Application.xmi,\
                css/,\
                splash.bmp,\
-               plugin_customization.ini
+               plugin_customization.ini,\
+               vcards/
