--- a/examples/org.eclipse.e4.demo.e4photo/build.properties
+++ b/examples/org.eclipse.e4.demo.e4photo/build.properties
@@ -4,5 +4,8 @@ bin.includes = META-INF/,\
                plugin.xml,\
                Application.xmi,\
                scripts/,\
-               OSGI-INF/
+               OSGI-INF/,\
+               css/,\
+               icons/,\
+               images/
 source.. = src/
