bug 279933: Get rid of NLS_MESSAGEFORMAT_* directives

--- a/bundles/org.eclipse.compare/plugins/org.eclipse.compare/compare/org/eclipse/compare/contentmergeviewer/TextMergeViewerResources.properties
+++ b/bundles/org.eclipse.compare/plugins/org.eclipse.compare/compare/org/eclipse/compare/contentmergeviewer/TextMergeViewerResources.properties
@@ -8,7 +8,7 @@
 # Contributors:
 #     IBM Corporation - initial API and implementation
 ###############################################################################
-# NLS_MESSAGEFORMAT_VAR
+#
 # @(#)TextMergeViewerResources.properties
 #
 # Resource strings for TextMergeViewer.java
@@ -21,9 +21,7 @@ saveDialog.message= Resource has been modified. Save changes?
 compareProgressTask.title= Computing Differences...
 
 tooComplexError.title= Error
-# NLS_MESSAGEFORMAT_ALL
-tooComplexError.format= Too many differences. Turn on the ''Ignore White Space'' option or do a structure compare first.
-# NLS_MESSAGEFORMAT_VAR
+tooComplexError.message= Too many differences. Turn on the 'Ignore White Space' option or do a structure compare first.
 
 #####################################################
 # Toolbar actions
