Bug 283366 Fix provider names and bundle names

--- a/bundles/org.eclipse.e4.ui.model.workbench/plugin.properties
+++ b/bundles/org.eclipse.e4.ui.model.workbench/plugin.properties
@@ -7,10 +7,10 @@
 # Contributors:
 #      IBM Corporation - initial API and implementation
 #
-# $Id: plugin.properties,v 1.1 2008/11/11 18:19:11 bbokowski Exp $
+# $Id: plugin.properties,v 1.2 2009/06/09 19:02:33 pwebster Exp $
 
 pluginName = Workbench Model (Incubation)
-providerName = www.example.org
+providerName = Eclipse.org
 
 _UI_Application_content_type = Application File
 _UI_Workbench_content_type = Workbench File
