Bug 153290  [Help][Search] Redesign search scope dialogs

--- a/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
+++ b/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
@@ -98,6 +98,7 @@ WorkingSetName=List &name:
 WorkingSetContent=Topics to search
 Scope=Search scope:
 ScopeTooltip=Select Search Scope
+DefaultScopeName=scope
 
 #Confirm Show All Topics dialog
 confirmShowAllTitle=Confirm
