Bug 107623  [Webapp] Help system webapp: Provide footer area like banner area (persistent, across browser window, optional)

--- a/org.eclipse.help.base/preferences.ini
+++ b/org.eclipse.help.base/preferences.ini
@@ -10,6 +10,14 @@ banner=
 # Example: banner_height=60
 banner_height=
 
+# Location of the footer page to display in the bottom frame.
+# Example: footer=/org.eclipse.help.webapp/advanced/banner.html
+footer=
+
+# Height of the footer frame
+# Example: footer_height=60
+footer_height=
+
 # The page to show in the content area when opening help.
 # Specify your html page as /pluginId/path/to/home.html.
 # Currently, the default home is /org.eclipse.help/doc/help_home.html.
