--- a/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
+++ b/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
@@ -47,6 +47,7 @@ Select=Select a set of books to be searched:
 Toolbar=Toolbar
 Tabs=Tabs
 Banner=Banner
+Footer=Footer
 CannotSync=The current document displayed does not exist in the table of contents.
 JavaScript_disabled=This page requires JavaScript.  You need to enable JavaScript in your web browser, restart the browser, and return to this page.
 back_tip = Go Back
