Bug 284861 TVT35:TCT310: JPN: Mnemonic "T" conflicts for "Add Task" and "Properties"

--- a/ant/org.eclipse.ant.ui/Ant Tools Support/org/eclipse/ant/internal/ui/preferences/AntPreferencesMessages.properties
+++ b/ant/org.eclipse.ant.ui/Ant Tools Support/org/eclipse/ant/internal/ui/preferences/AntPreferencesMessages.properties
@@ -59,7 +59,7 @@ AntPreferencePage_0=Some tasks, such as "javac", require the tools.jar library t
 AntPreferencePage_1=&Warn when tools.jar is not on classpath
 AntPreferencePage_2=Documentation &URL:
 
-AntTasksPage_1 = Add &Task...
+AntTasksPage_1 = Add Ta&sk...
 AntTasksPage_2 = &Edit Task...
 AntTasksPage_3 = Remo&ve
 AntTasksPage_addTaskDialogTitle = Add Task
