Bug 285039 TVT35:TCT342: PLK: missing colon in Editor -> Problems

--- a/ant/org.eclipse.ant.ui/Ant Tools Support/org/eclipse/ant/internal/ui/preferences/AntPreferencesMessages.properties
+++ b/ant/org.eclipse.ant.ui/Ant Tools Support/org/eclipse/ant/internal/ui/preferences/AntPreferencesMessages.properties
@@ -139,7 +139,7 @@ AntEditorPreferencePage_23=&Comments
 AntEditorPreferencePage_24=Def&ining tasks
 AntEditorPreferencePage_25=&Targets
 AntEditorPreferencePage_26=DTD Declarations
-AntEditorPreferencePage_27=Sec&urity Problems
+AntEditorPreferencePage_27=Sec&urity Problems:
 AntEditorPreferencePage_28=&Ignore all buildfile problems
 AntEditorPreferencePage_29=Set the names of files that will not be checked for problems in the Ant Editor. List is comma separated:
 AntEditorPreferencePage_5=Fore&ground:
