bug 77207: [Repo View] Keyboard shortcut for copying cvs repository location to clipboard

--- a/bundles/org.eclipse.team.cvs.ui/plugin.xml
+++ b/bundles/org.eclipse.team.cvs.ui/plugin.xml
@@ -685,6 +685,7 @@
                tooltip="%CopyRepositoryNameAction.tooltip"
                class="org.eclipse.team.internal.ccvs.ui.repo.CopyRepositoryNameAction"
                menubarPath="miscGroup"
+               definitionId="org.eclipse.ui.edit.copy"
                id="org.eclipse.team.ccvs.ui.copyNames">
          </action>
          <action
