Bug# 285277 - ACTIVE_EDITOR_INPUT_NAME does not contribute to source priority

--- a/bundles/org.eclipse.ui/plugin.xml
+++ b/bundles/org.eclipse.ui/plugin.xml
@@ -2197,6 +2197,10 @@
                name="activeSite"
                priorityLevel="workbench">
          </variable>
+         <variable
+               name="activeEditorInput"
+               priorityLevel="workbench">
+         </variable>
       </sourceProvider>
       <sourceProvider
             provider="org.eclipse.ui.internal.services.ActionSetSourceProvider">
