--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/actions/ActionMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/actions/ActionMessages.properties
@@ -93,10 +93,10 @@ AbstractLaunchHistoryAction_5={0}
 AbstractLaunchHistoryAction_6=(no launch history)
 AbstractDebugActionDelegate_0=Error
 
-ToggleDetailPaneAction_1=Vertical View Orientation
+ToggleDetailPaneAction_1=Vertical
 ToggleDetailPaneAction_2=Place the Detail Pane Underneath the Main Tree View
 ToggleDetailPaneAction_3=Place the Detail Pane Underneath the Main Tree View
-ToggleDetailPaneAction_4=Horizontal View Orientation
+ToggleDetailPaneAction_4=Horizontal
 ToggleDetailPaneAction_5=Place the Detail Pane on the Right of the Main Tree View
 ToggleDetailPaneAction_6=Place the Detail Pane on the Right of the Main Tree View
 ToggleDetailPaneAction_8=Hide the Detail Pane so that only the Main Tree View is Visible
