Bug 288192 -  Competing launch configurationTabGroup contribution should generate warning

--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/launchConfigurations/LaunchConfigurationsMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/launchConfigurations/LaunchConfigurationsMessages.properties
@@ -129,6 +129,7 @@ LaunchShortcutSelectionDialog_3=Description not available
 # or any label of a contributed ILaunchMode.
 LaunchShortcutSelectionDialog_4=&Select what to {0}:
 
+LaunchConfigurationPresentationManager_0=LaunchConfigurationTabGroupExtension {0} for {1} has been replaced by extension {2}
 LaunchConfigurationPropertiesDialog_Edit_launch_configuration_properties_1=Edit launch configuration properties
 LaunchConfigurationPropertiesDialog_Properties_for__0__2=Edit Configuration
 
