Bug 272564 [PropertiesView] need a mechanism for views to 'opt out' of interactions with the property view

--- a/bundles/org.eclipse.ui/plugin.properties
+++ b/bundles/org.eclipse.ui/plugin.properties
@@ -57,6 +57,7 @@ ExtPoint.browserSupport = Browser Support
 ExtPoint.statusHandlers = Status Handlers
 ExtPoint.installationPages = Installation Pages
 ExtPoint.tweaklets = Tweaklets (internal/experimental)
+ExtPoint.propertiesView = Properties view
 
 Views.Category.Basic = General
 Views.IntroAdapter = Welcome
