--- a/bundles/org.eclipse.ui/plugin.properties
+++ b/bundles/org.eclipse.ui/plugin.properties
@@ -189,6 +189,8 @@ command.nextPerspective.description = Switch to the next perspective
 command.nextPerspective.name = Next Perspective
 command.nextSubTab.name = Next Sub-Tab
 command.nextSubTab.description = Switch to the next sub-tab
+command.nextTab.name = Next Tab
+command.nextTab.description = Switch to the next tab
 command.nextView.description = Switch to the next view
 command.nextView.name = Next View
 command.openEditorDropDown.description = Open the editor drop down list
@@ -210,6 +212,8 @@ command.previousPerspective.description = Switch to the previous perspective
 command.previousPerspective.name = Previous Perspective
 command.previousSubTab.name = Previous Sub-Tab
 command.previousSubTab.description = Switch to the previous sub-tab
+command.previousTab.name = Previous Tab
+command.previousTab.description = Switch to the previous tab
 command.previousView.description = Switch to the previous view
 command.previousView.name = Previous View
 command.print.description = Print
