--- a/org.eclipse.help.webapp/plugin.xml
+++ b/org.eclipse.help.webapp/plugin.xml
@@ -11,7 +11,8 @@
  -->
 
 <plugin>
-   <extension-point id="contentFilter" name="%content_filter_extension_name" schema="schema/contentFilter.exsd"/>
+   <extension-point id="contentFilter" name="Content Filter" schema="schema/contentFilter.exsd"/>
+  <extension-point id="view" name="View" schema="schema/view.exsd"/>
    <extension
          point="org.eclipse.equinox.http.registry.httpcontexts">
       <httpcontext
